--- a/css/default.less
+++ b/css/default.less
@@ -25,11 +25,11 @@ code, kbd, pre, samp {
 pre {
   color: @nord4;
   background-color: @nord0;
-  border-radius: 3px;
-  border: 1px solid @nord4;
+  border-radius: 2px;
+  border: 1px solid @nord0;
   word-wrap: break-word;
   word-break: break-all;
-  margin-bottom: 10px;
+  margin: 25px 0px;
   padding: 10px;
   font-size: 14px;
 }
@@ -91,7 +91,7 @@ code {
   margin-right: 5px;
   text-align: center;
   padding: 2px 10px 3px 10px;
-  border-radius: 15px;
+  border-radius: 2px;
 }
 
 #footer {
