--- a/css/default.less
+++ b/css/default.less
@@ -1,15 +1,15 @@
 @import "./css/syntax.less";
-@import url('https://fonts.googleapis.com/css?family=IBM+Plex+Mono:400,400i,700');
+@import url('https://fonts.googleapis.com/css?family=Merriweather:400,400i|Open+Sans:300,300i,400,400i|IBM+Plex+Mono:400,400i,700');
 
 h1, h2, h3, h4, h5, h6 {
-    font-family: 'Merriweather';
+    font-family: 'Merriweather', Georgia, 'Times New Roman', Times, serif;
     margin-top: 20px;
 }
 
 body {
     color: @black;
     background-color: @white;
-    font-family: 'Open Sans', Helvetica, Arial, sans-serif;
+    font-family: 'Open Sans', Arial, sans-serif;
     font-size: 18px;
     font-weight: 300;
 }
@@ -25,8 +25,6 @@ code, kbd, pre, samp {
 pre {
   color: @nord4;
   background-color: @nord0;
-  border-radius: 2px;
-  border: 1px solid @nord0;
   word-wrap: break-word;
   word-break: break-all;
   margin: 25px 0px;
@@ -36,6 +34,13 @@ pre {
 
 code {
   color: @nord9;
+}
+
+blockquote {
+  font-family: Merriweather;
+  border-right: @black 1px solid;
+  border-top: @black 1px solid;
+  padding: 5px 10px 5px 5px;
 }
 
 .navbar {
@@ -69,7 +74,7 @@ code {
   /* margin-right: -50vw; */
 }
 
-.full-width .caption {
+figcaption {
   text-align: center;
 }
 
@@ -84,14 +89,13 @@ code {
   margin-right: 10px;
 }
 
-#tag {
+.tag {
   font-size: 12px;
   background-color: @black;
   color: @white;
   margin-right: 5px;
   text-align: center;
-  padding: 2px 10px 3px 10px;
-  border-radius: 2px;
+  padding: 2px 7px 3px 7px;
 }
 
 #footer {
@@ -116,8 +120,14 @@ code {
   }
 
 @media (min-width: 768px) {
-  #content{
+    #content{
         margin-top: 10px;
         padding: 20px 75px;
+    }
+
+    blockquote {
+        float: right;
+        margin-left: 50px;
+        margin-right: -5vw
     }
 }
