Update LAF and implement drafts
Signed-off-by: Keith Schulze <keith.schulze@gmail.com>

--- a/templates/default.html
+++ b/templates/default.html
@@ -69,10 +69,10 @@
           $body$
         </div>
         <div id="footer">
-          <div class="row justify-content-md-center">
+          <div class="row justify-content-center">
             Copyright © Keith Schulze
           </div>
-          <div class="row justify-content-md-center">
+          <div class="row justify-content-center">
             Proudly powered by&nbsp<a href="http://jaspervdj.be/hakyll">Hakyll</a>
           </div>
         </div>
