--- a/css/default.less
+++ b/css/default.less
@@ -81,12 +81,13 @@ figcaption {
 #post-date {
   font-size: 16px;
   color: @black;
-  margin-right: 15px;
+  margin-right: 5px;
+  text-align: center;
 }
 
 #tag-container {
   margin-bottom: 15px;
-  margin-right: 10px;
+  // margin-right: 5px;
 }
 
 .tag {
@@ -119,10 +120,12 @@ figcaption {
     }
   }
 
-@media (min-width: 768px) {
+@media (min-width: 992px) {
     #content{
         margin-top: 10px;
-        padding: 20px 75px;
+        padding-left: 75px;
+        padding-right: 75px;
+        padding-bottom: 50px;
     }
 
     blockquote {
