--- a/templates/post.html
+++ b/templates/post.html
@@ -1,7 +1,9 @@
-<div class="col-md-10 offset-md-1">
+<!-- <div class="col-md-10 offset-md-1">
   <div class="float-right" id="post-date">
     $date$
-  </div>
+  </div> -->
+<div class="col-md-10 offset-md-1">
+  <div id="post-date">$date$</div>
 </div>
 
 $if(tags)$
