--- a/templates/default.html
+++ b/templates/default.html
@@ -65,8 +65,10 @@
         <div id="title" class="row justify-content-center">
           <h1>$title$</h1>
         </div>
-        <div id="content" class="row">
-          $body$
+        <div id="content">
+          <div class="row">
+            $body$
+          </div>
         </div>
         <div id="footer">
           <div class="row justify-content-center">
