--- a/templates/post-list.html
+++ b/templates/post-list.html
@@ -1,9 +1,7 @@
-<div class"col-md-10 offset-md-1">
-  <ul>
+<div class="col-md-11 offset-md-1">
+  <div class="list-group list-group-flush">
     $for(posts)$
-    <li>
-      <a href="$url$">$title$</a> - $date$
-    </li>
+      $partial("templates/post-teaser.html")$
     $endfor$
-  </ul>
+  </div>
 </div>
