Drafting and enhancements in prep for publishing first blog

--- a/templates/default.html
+++ b/templates/default.html
@@ -62,10 +62,12 @@
       </header>
 
       <div class="container">
-        <div id="title" class="row justify-content-center">
-          <h1>$title$</h1>
-        </div>
         <div id="content">
+          <div id="title" class="row">
+            <div class="col-md-10 offset-md-1">
+              <h1>$title$</h1>
+            </div>
+          </div>
           <div class="row">
             $body$
           </div>
