--- a/css/default.less
+++ b/css/default.less
@@ -1,21 +1,27 @@
 @import "./css/syntax.less";
-@import url('https://fonts.googleapis.com/css?family=Merriweather:400,400i|Open+Sans:300,300i,400,400i|IBM+Plex+Mono:400,400i,700');
+@import url('https://fonts.googleapis.com/css?family=IBM+Plex+Mono|IBM+Plex+Sans:400,700|IBM+Plex+Serif');
+
 
 h1, h2, h3, h4, h5, h6 {
-    font-family: 'Merriweather', Georgia, 'Times New Roman', Times, serif;
-    margin-top: 20px;
+    font-family: "IBM Plex Sans", Helvetica, Arial, sans-serif;
+    font-weight: 700;
+    margin-top: 2em;
 }
 
 body {
     color: @black;
     background-color: @white;
-    font-family: 'Open Sans', Arial, sans-serif;
-    font-size: 18px;
-    font-weight: 300;
+    font-family: "IBM Plex Serif", Georgia, 'Times New Roman', Times, serif;
+    font-size: 1.1rem;
+    border-top: 3px solid #000;
 }
 
 a {
   color: @nord10;
+}
+
+a.uri {
+  word-break: break-word;
 }
 
 code, kbd, pre, samp {
@@ -23,17 +29,27 @@ code, kbd, pre, samp {
 }
 
 pre {
-  color: @nord4;
-  background-color: @nord0;
-  word-wrap: break-word;
-  word-break: break-all;
-  margin: 25px 0px;
-  padding: 10px;
-  font-size: 14px;
+  color: @nord3;
+  background-color: @nord6;
+  margin: 40px 0px;
+  padding: 50px 20px;
+  font-size: 0.7rem;
+  // border-radius: 3px;
+  width: 100vw;
+  position: relative;
+  left: 50%;
+  right: 50%;
+  margin-left: -50vw;
 }
 
 code {
   color: @nord9;
+}
+
+pre code {
+  display: inline-block;
+  width: 100%;
+  overflow: scroll;
 }
 
 blockquote {
@@ -45,7 +61,7 @@ blockquote {
 
 .navbar {
     border-radius: 0;
-    box-shadow: 0 0 1px rgba(0,0,0,0.15);
+    font-family: "IBM Plex Sans", Helvetica, Arial, sans-serif;
 }
 
 .navbar-light .navbar-nav .nav-link {
@@ -71,7 +87,10 @@ blockquote {
   left: 50%;
   right: 50%;
   margin-left: -50vw;
-  /* margin-right: -50vw; */
+}
+
+figure {
+  margin: 3em 0;
 }
 
 figcaption {
@@ -79,10 +98,10 @@ figcaption {
 }
 
 #post-date {
-  font-size: 16px;
+  font-size: 1.0em;
   color: @black;
   margin-right: 5px;
-  text-align: center;
+  padding-top: 3px;
 }
 
 #tag-container {
@@ -91,12 +110,17 @@ figcaption {
 }
 
 .tag {
-  font-size: 12px;
+  font-size: 0.8em;
   background-color: @black;
   color: @white;
   margin-right: 5px;
   text-align: center;
-  padding: 2px 7px 3px 7px;
+  padding: 3px 10px 4px 10px;
+  border-radius: 1em;
+}
+
+a:hover.tag {
+  color: white;
 }
 
 #footer {
@@ -104,33 +128,71 @@ figcaption {
 }
 
 @media (max-width: 991.98px) {
-    .navbar-nav-scroll {
-        max-width: 100%;
-        height: 2.5rem;
-        margin-top: .25rem;
-        overflow: hidden;
-        font-size: .875rem
-    }
-
-    .navbar-nav-scroll .navbar-nav {
-        padding-bottom: 2rem;
-        overflow-x: auto;
-        white-space: nowrap;
-        -webkit-overflow-scrolling: touch
-    }
+  .navbar-nav-scroll {
+    max-width: 100%;
+    height: 2.5rem;
+    margin-top: .25rem;
+    overflow: hidden;
+    font-size: 1rem
   }
 
-@media (min-width: 992px) {
-    #content{
-        margin-top: 10px;
-        padding-left: 75px;
-        padding-right: 75px;
-        padding-bottom: 50px;
-    }
+  .navbar-nav-scroll .navbar-nav {
+    padding-bottom: 2rem;
+    overflow-x: auto;
+    white-space: nowrap;
+    -webkit-overflow-scrolling: touch
+  }
+}
 
-    blockquote {
-        float: right;
-        margin-left: 50px;
-        margin-right: -5vw
-    }
+@media (min-width: 576px) {
+  body {
+    font-size: 1.2rem;
+  }
+
+  pre {
+    font-size: 0.8rem;
+    padding: 50px 50px;
+  }
+}
+
+@media (min-width: 768px) {
+  body {
+    font-size: 1.3rem;
+  }
+
+  pre {
+    font-size: 0.9rem;
+    padding: 50px 110px;
+  }
+}
+
+@media (min-width: 992px) {
+  body {
+    font-size: 1.35rem;
+  }
+
+  pre {
+    font-size: 1.0rem;
+    padding: 50px 180px
+  }
+
+  #content{
+    margin-top: 10px;
+    padding-left: 75px;
+    padding-right: 75px;
+    padding-bottom: 50px;
+  }
+
+  blockquote {
+    float: right;
+    margin-left: 50px;
+    margin-right: -5vw
+  }
+}
+
+@media (min-width: 1200px) {
+  pre {
+    font-size: 1.0rem;
+    padding: 50px 220px
+  }
 }
