--- a/templates/post.html
+++ b/templates/post.html
@@ -1,20 +1,15 @@
-<!-- <div class="col-md-10 offset-md-1">
-  <div class="float-right" id="post-date">
-    $date$
-  </div> -->
-<div class="col-md-10 offset-md-1">
-  <div id="post-date">$date$</div>
+<div class="col-md-5 offset-md-1 mt-1">
+  $if(date)$
+    <div id="post-date">$date$</div>
+  $endif$
 </div>
-
-$if(tags)$
-<div class="col-md-10 offset-md-1">
-  <div class="float-right">
-    <div id="tag-container">
+<div class="col-md-5 mt-1 mb-4">
+  $if(tags)$
+    <div class="float-md-right" id="tag-container">
       $tags$
     </div>
-  </div>
+  $endif$
 </div>
-$endif$
 
 <div class="col-md-10 offset-md-1">
 $body$
