Tweak templates and layouts

--- a/templates/archive.html
+++ b/templates/archive.html
@@ -1,1 +1,8 @@
-$partial("templates/post-list.html")$
+<div id="title" class="row">
+  <div class="col-md-10 offset-md-1">
+    <h1>$title$</h1>
+  </div>
+</div>
+<div class="row">
+  $partial("templates/post-list.html")$
+</div>
