--- a/templates/post.html
+++ b/templates/post.html
@@ -1,16 +1,23 @@
-<div class="col-md-5 offset-md-1 mt-1">
-  $if(date)$
-    <div id="post-date">$date$</div>
-  $endif$
+<div id="title" class="row">
+  <div class="col-md-10 offset-md-1">
+    <h1>$title$</h1>
+  </div>
 </div>
-<div class="col-md-5 mt-1 mb-4">
-  $if(tags)$
-    <div class="float-md-right" id="tag-container">
-      $tags$
-    </div>
-  $endif$
-</div>
+<div class="row">
+  <div class="col-md-5 offset-md-1 mt-1">
+    $if(date)$
+      <div id="post-date">$date$</div>
+    $endif$
+  </div>
+  <div class="col-md-5 mt-1 mb-4">
+    $if(tags)$
+      <div class="float-md-right" id="tag-container">
+        $tags$
+      </div>
+    $endif$
+  </div>
 
-<div class="col-md-10 offset-md-1">
-$body$
+  <div class="col-md-10 offset-md-1">
+    $body$
+  </div>
 </div>
