--- a/css/default.less
+++ b/css/default.less
@@ -34,7 +34,6 @@ pre {
   margin: 40px 0px;
   padding: 50px 20px;
   font-size: 0.7rem;
-  // border-radius: 3px;
   width: 100vw;
   position: relative;
   left: 50%;
@@ -49,7 +48,7 @@ code {
 pre code {
   display: inline-block;
   width: 100%;
-  overflow: scroll;
+  overflow: auto;
 }
 
 blockquote {
