Tweak post list LnF

--- a/css/default.less
+++ b/css/default.less
@@ -24,6 +24,14 @@ a.uri {
   word-break: break-word;
 }
 
+.list-group-item a {
+  color: @black
+}
+
+.list-group-item {
+  padding: 0px
+}
+
 code, kbd, pre, samp {
   font-family: "IBM Plex Mono",Menlo,Monaco,Consolas,"Liberation Mono","Courier New",monospace;
 }
