--- a/templates/post-list.html
+++ b/templates/post-list.html
@@ -1,7 +1,7 @@
 <div class="col-md-10 offset-md-1">
-  <div class="list-group list-group-flush">
+  <ul class="list-group list-group-flush">
     $for(posts)$
-      $partial("templates/post-teaser.html")$
+    $partial("templates/post-teaser.html")$
     $endfor$
-  </div>
+  </ul>
 </div>
