--- a/templates/post-teaser.html
+++ b/templates/post-teaser.html
@@ -1,8 +1,11 @@
-<a href="$url$" class="list-group-item list-group-item-action flex-column align-items-start">
-  <h4 class="mb-1">$title$</h4>
+<li class="list-group-item flex-column align-items-start">
+  <h4 class="mb-1">
+    <a href="$url$">$title$</a>
+  </h4>
   <small>$date$</small>
   $if(teaser)$
   <p class="mb-1">$teaser$</p>
   $endif$
-  <small class="text-muted">Read more...</small>
-</a>
+  <small class="text-muted">
+    <a href="$url$">Read more...</a></small>
+</li>
